	  Beautify man pages
	* timidity/sndfont.c:
	  Hack up around set_rootkey() and set_rootfreq()

2004-02-03  Saito <saito2@digitalme.com>

	* timidity/mix.c, timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/reverb.c:
	  Change implementation of #extension timeout.
	  Fix some initializations.
	  Fix some free() functions.
	  Implement opt_default_module.

2004-02-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.c, timidity/timidity.c:
	  Changed alloc_instrument_map_bank()'s behavior.

2004-02-02  Saito <saito2@digitalme.com>

	* timidity/mix.c:
	  Fix sustain.
	* timidity/sndfont.c:
	  fasten set_rootfreq().

2004-02-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/sndfont.c:
	  Fix around scale tuning

2004-02-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Update "(bank|drumset) mapid num" and "#extension copymap"

2004-01-31  mput <root@mput.dip.jp>

	* Makefile.am (EXTRA_DIST): Fix to fit below
	* INSTALL.jp: Move to INSTALL.ja
	* README.jp: Move to README.ja
	* INSTALL: update.
	* README: update.

2004-01-31  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.[ch], timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/timidity.c:
	  New syntax of *.cfg:
	    (bank|drumset) <mapid> <num>
	    #extension copymap <tomap> <frommap>
	  Besides, 'copybank' now copies tunes, envelopes, etc.
	  That should be what it is expected to do.
	* timidity/sysdep.h
	  Fixed a compilation error with MAX_CHANNELS > 32.
	* timidity/freq.c, timidity/sndfont.c
	  Changed error handling of freq_fourier() with cfgforsf.

2004-01-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5,
	  timidity/instrum.[ch], timidity/mod2midi.c,
	  timidity/playmidi.c, timidity/smplfile.c,
	  timidity/sndfont.c, timidity/timidity.c:
	  Support for GUS scale tuning
	  Support for scale tuning patch option

2004-01-29  TAMUKI Shoichi <tamuki@linet.gr.jp>
